[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhatching"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp==3.8.4",
    "pydantic==1.10.7",
]

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

# [tool.setuptools.package-data]
# "pyhatching.data" = ["*.txt", "*.json", "templates/*"]